--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,8 @@ on:
           - major
 
 permissions:
-  id-token: write  # Обязательно для OIDC
-  contents: write  # Для создания коммита с новой версией
+  id-token: write
+  contents: write
 
 jobs:
   publish:
@@ -54,9 +54,6 @@ jobs:
             npm install
           fi
         
-      - name: Run tests
-        run: npm test
-        
       - name: Build package
         run: npm run build --if-present
 
@@ -66,7 +63,6 @@ jobs:
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
             echo "type=${{ inputs.version_type }}" >> $GITHUB_OUTPUT
           else
-            # Автоопределение типа версии по коммитам
             COMMIT_MSG=$(git log -1 --pretty=%B)
             if echo "$COMMIT_MSG" | grep -qiE "^(breaking|major):"; then
               echo "type=major" >> $GITHUB_OUTPUT
