--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BADtochka/badlib"
+    "url": "git+https://github.com/BADtochka/badlib.git"
   }
 }
