--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "badlib",
   "version": "0.1.1",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
@@ -9,7 +10,9 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "type": "module",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
