fix: remove bun.lock and update package.json dependencies
- Bun lock file removed
- Updated types for @types/bun to ^1.3.6
- Updated devDependencies to include @types/bun
- Updated peerDependencies to include TypeScript 5.9.3
- Updated dependencies to include clsx, tailwind-merge, and undici-types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     /* Language & runtime */
-    "target": "ES2019",
+    "target": "esnext",
     "lib": [
       "ES2019",
       "DOM"
     ],
     "jsx": "react-jsx",
     /* Module system */
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "preserve",
+    "moduleResolution": "bundler",
     "moduleDetection": "force",
     "verbatimModuleSyntax": true,
     /* Output */
