--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,15 +2,13 @@ name: Publish to npm
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main]
   workflow_dispatch:
     inputs:
       version_type:
-        description: 'Version bump type'
+        description: "Version bump type"
         required: true
-        default: 'patch'
+        default: "patch"
         type: choice
         options:
           - patch
@@ -18,12 +16,13 @@ on:
           - major
 
 permissions:
-  id-token: write  # Обязательно для OIDC
-  contents: write  # Для создания коммита с новой версией
+  id-token: write
+  contents: write
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
     steps:
       - name: Checkout code
@@ -35,24 +34,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Configure Git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Update npm to latest version
-        run: npm install -g npm@latest
-        
       - name: Install dependencies
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
+        run: npm ci
 
       - name: Build package
         run: npm run build --if-present
@@ -60,16 +51,16 @@ jobs:
       - name: Determine version type
         id: version_type
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "type=${{ inputs.version_type }}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "type=${{ inputs.version_type }}" >> "$GITHUB_OUTPUT"
           else
             COMMIT_MSG=$(git log -1 --pretty=%B)
             if echo "$COMMIT_MSG" | grep -qiE "^(breaking|major):"; then
-              echo "type=major" >> $GITHUB_OUTPUT
+              echo "type=major" >> "$GITHUB_OUTPUT"
             elif echo "$COMMIT_MSG" | grep -qiE "^(feat|feature|minor):"; then
-              echo "type=minor" >> $GITHUB_OUTPUT
+              echo "type=minor" >> "$GITHUB_OUTPUT"
             else
-              echo "type=patch" >> $GITHUB_OUTPUT
+              echo "type=patch" >> "$GITHUB_OUTPUT"
             fi
           fi
 
@@ -77,26 +68,23 @@ jobs:
         id: version
         run: |
           NEW_VERSION=$(npm version ${{ steps.version_type.outputs.type }} -m "chore: bump version to %s [skip ci]")
-          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "Bumped version to $NEW_VERSION"
-        
+          echo "new_version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
+
       - name: Push changes
         run: |
           git push origin ${{ github.ref_name }}
           git push origin ${{ steps.version.outputs.new_version }}
-        
+
       - name: Publish to npm
         run: npm publish
-        
-      - name: Create GitHub Release
-        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.version.outputs.new_version }}
-          release_name: Release ${{ steps.version.outputs.new_version }}
-          body: |
-            Changes in this release:
-            ${{ github.event.head_commit.message }}
-          draft: false
-          prerelease: false
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create GitHub Release
+        run: |
+          gh release create "${{ steps.version.outputs.new_version }}" \
+            --title "Release ${{ steps.version.outputs.new_version }}" \
+            --notes "Changes in this release:
+          ${{ github.event.head_commit.message }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
