**chore(deps):** update git+remote URL in repo config

--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BADtochka/badlib"
+    "url": "git+https://github.com/BADtochka/badlib.git"
   }
 }
